<resources>
    <string name="app_name">Budgeting App</string>
    <string name="statistics">Statistics</string>
    <string name="expand">Expand</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="back">Back</string>
    <string name="transactions">Transactions</string>
    <string name="done">Done</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="del">Del</string>
    <string name="_0">0</string>
    <string name="period">.</string>
    <string name="_0_00">$0.00</string>
    <string name="remove_transactions">Select a transaction to remove</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="remove_transaction">Remove Transaction</string>
    <string name="budgeting">Budgeting</string>
    <string name="csc22100">CSC22100</string>
    <string name="enter_transaction_name">Enter transaction name</string>
    <string name="menu_prompt">Select a Transaction Type</string>
    <string name="select_a_transaction_type">Select a Transaction Type</string>
    <string name="enter_transaction_name_">Enter Transaction Name:</string>
</resources>