<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Activity3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="344dp"
        android:layout_height="619dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.687">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            app:columnCount="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.80"
            app:rowCount="4">

            <Button
                android:id="@+id/op1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addNum"
                android:text="@string/_1"
                app:layout_column="0"
                app:layout_row="0" />

            <Button
                android:id="@+id/op2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addNum"
                android:text="@string/_2"
                app:layout_column="1"
                app:layout_row="0" />

            <Button
                android:id="@+id/op3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addNum"
                android:text="@string/_3"
                app:layout_column="2"
                app:layout_row="0" />

            <Button
                android:id="@+id/op4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addNum"
                android:text="@string/_4"
                app:layout_column="0"
                app:layout_row="1" />

            <Button
                android:id="@+id/op5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addNum"
                android:text="@string/_5"
                app:layout_column="1"
                app:layout_row="1" />

            <Button
                android:id="@+id/op6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addNum"
                android:text="@string/_6"
                app:layout_column="2"
                app:layout_row="1" />

            <Button
                android:id="@+id/op7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addNum"
                android:text="@string/_7"
                app:layout_column="0"
                app:layout_row="2" />

            <Button
                android:id="@+id/op8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addNum"
                android:text="@string/_8"
                app:layout_column="1"
                app:layout_row="2" />

            <Button
                android:id="@+id/op9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addNum"
                android:text="@string/_9"
                app:layout_column="2"
                app:layout_row="2" />

            <Button
                android:id="@+id/opDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="removeNum"
                android:text="@string/del"
                app:layout_column="0"
                app:layout_row="3" />

            <Button
                android:id="@+id/op0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addNum"
                android:text="@string/_0"
                app:layout_column="1"
                app:layout_row="3" />

            <Button
                android:id="@+id/doneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                app:layout_column="2"
                app:layout_row="3" />
        </androidx.gridlayout.widget.GridLayout>

        <TextView
            android:id="@+id/moneyAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/_0_00"
            android:textSize="70sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/transaction_menu"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moneyAmount"
            app:layout_constraintVertical_bias="0.282"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_a_transaction_type"
            app:layout_constraintBottom_toTopOf="@+id/transaction_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moneyAmount" />

        <EditText
            android:id="@+id/transaction_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enter_transaction_name_"
            app:layout_constraintBottom_toTopOf="@+id/transaction_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transaction_menu"
            app:layout_constraintVertical_bias="0.636" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/back_button_bg"
        android:contentDescription="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_longback_foreground"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>